<?xml version="1.0"?>
<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
  <modelVersion>4.0.0</modelVersion>
  <groupId>edu.emory.cellbio</groupId>
  <artifactId>svg-embed-and-crop</artifactId>
  <version>1.7-SNAPSHOT</version>
  <name>Embed and Crop Images Inkscape Plugin</name>
  <developers>
     <developer>
          <name>Benjamin Nanes</name>
     </developer>
  </developers>
  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>1.8</maven.compiler.source>
    <maven.compiler.target>1.8</maven.compiler.target>
  </properties>
  
     <build>
          <plugins>
               <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-assembly-plugin</artifactId>
                    <version>2.4</version>
                    <configuration>
                         <descriptors>
                              <descriptor>src/main/assembly/build-scheme.xml</descriptor>
                         </descriptors>
                    </configuration>
                    <executions>
                         <execution>
                              <id>distributions</id>
                              <phase>package</phase>
                              <goals>
                                   <goal>single</goal>
                              </goals>
                         </execution>
                    </executions>
               </plugin>
               
               <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-site-plugin</artifactId>
                    <version>3.10.0</version>
                    <executions>
                         <execution>
                              <id>gen-site</id>
                              <phase>package</phase>
                              <goals>
                                   <goal>site</goal>
                              </goals>
                         </execution>
                    </executions>
               </plugin>
               
          </plugins>
     </build>
     
     <reporting>
          <plugins>  
               <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-project-info-reports-plugin</artifactId>
                    <version>2.7</version>
                    <reportSets>
                         <reportSet>
                              <reports>
                              </reports>
                         </reportSet>
                    </reportSets>
               </plugin>
               <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-javadoc-plugin</artifactId>
                    <version>2.9.1</version>
                    <configuration>
                         <show>private</show>
                    </configuration>
               </plugin>
          </plugins>
     </reporting>
     
  <dependencies>
    <dependency>
      <groupId>commons-codec</groupId>
      <artifactId>commons-codec</artifactId>
      <version>1.7</version>
      <scope>compile</scope>
    </dependency>
    <dependency>
      <groupId>net.imagej</groupId>
      <artifactId>ij</artifactId>
      <version>1.47i</version>
      <type>jar</type>
      <scope>compile</scope>
    </dependency>
  </dependencies>
  
  <repositories>
        <repository>
            <id>scijava.public</id>
            <url>https://maven.scijava.org/content/groups/public</url>
        </repository>
  </repositories>
  
</project>
